fixed spacing

--- a/assets/index.css
+++ b/assets/index.css
@@ -19,7 +19,7 @@ body {
 
 
 .pic-col {
-    width: 60%;
+    width: 30%;
     float: left;
 }
 
